bzr-svn 0.4.13	UNRELEASED

  BUG FIXES

   * Fix compatibility with Subversion 1.4 on Windows.

   * Fix bug modifying set of right hand side revisions during fetch. (#264740)

   * Fix linking against Subversion 1.5 on Windows. (#263570)

   * Avoid NoneType error when no revisions to push in "bzr dpush". (#267484)

bzr-svn 0.4.12	2008-09-01

  BUG FIXES

   * Cope with svn+ prefix when setting tags. (#261748)

   * Fix contents of files when using stacked branching. (#262314)

   * Fix compatibility with Bazaar 1.7.

   * Use local application data directory on Windows for bzr-svn cache.
     (#231041)

   * No longer show backtrace when a generic DAV error occurs, as 
     this is usually a sign of a server-side error rather than a bug.
	 (#255159)

   * Fix forward declarations of Python types, fixes 
     compilation on mingw. (#263284)

   * Avoid explicit revnum reporting for inventory entries during fetch.
     (It caused severe speed regressions and is not necessary).

   * Fix size of bool variable in replacement stdbool.h. This was 
     causing strange errors on Windows, most notably slow fetches.

   * Fix pull into Subversion working copies.

   * Properly encode cache file path in case it contains non-ascii 
     characters. (#262923)

   * Don't link explicitly against apr libraries. (#262711)

  FEATURES

   * Use native Windows password prompter on Windows. (#263287)

bzr-svn 0.4.11	2008-08-26

bzr-svn 0.4.11~rc2	2008-08-26

  CHANGES

   * Fix setup.py run with python2.4. (#256804)

   * Use rst2html.py rather than rst2html if it is available.

  BUG FIXES

   * Parse http redirect errors in some non-English locales better.

   * Avoid importing tags as branches in svn-import, now that tags are 
     converted to native Bazaar tags.

  FEATURES

   * svn-import will now remove branches removed in Subversion. 
     (#246243). The --keep option can be specified to keep 
	 branches removed in Subversion around.
