@@ -10,6 +10,8 @@ bzr-svn 0.4.13	UNRELEASED
 
    * Avoid NoneType error when no revisions to push in "bzr dpush". (#267484)
 
+   * Properly convert errors raised when starting a commit. (#267899)
+
 bzr-svn 0.4.12	2008-09-01
 
   BUG FIXES
